examples/ezyq-admin/content/kubernetes/openshift/ingress1.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: mbb-dashboard
# spec:
#   rules:
#   - host: mbb-dashboard.apps.ocp4.maybank.com
#   # - host: mbb-dashboard
#     http:
#       paths:
#       - backend:
#           # Forward to a Service called 'mbb-dashboard'
#           service:
#             name: mbb-dashboard
#             port:
#               number: 8080
#         path: /
#         pathType: Exact

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mbb-dashboard
spec:
  host: mbb-dashboard.apps.ocp4.maybank.com
  to:
    kind: Service
    name: mbb-dashboard
  port:
    targetPort: 8080
